fixed overflow image on blog.html

--- a/css/blog.css
+++ b/css/blog.css
@@ -26,7 +26,7 @@ figure{
 
 /* header image style */
 .header-img{
-  width: 100vw;
+  width: 100%;
 
   grid-column-start: 1;
   grid-column-end: 4;
